# ArbHunter

./:  .env.example  .env.example  .gitignore  ARTIFACT_INDEX.md  Cargo.toml  Makefile  build_errors.txt  build_errors2.txt  build_out.json  calibration_fixture.json  canary_policy.json  canary_state.json  check_err.json  check_pk.ps1  deploy_final.ps1  deploy_fork.ps1  docker-compose.yml  execution_calibration_report.json  fast_aggregator_results.json  first_live_canary.log.tmp  force_lf_write.py  gas_calibration_results.json  get_address.ps1  get_nonce.ps1  high_value_calibration_results.json  historical_replay_24h_final.json  historical_replay_calibration_final.json  historical_replay_full_day_final.json  historical_replay_smoke.json  historical_replay_smoke_refined.json  historical_replay_summary.json  net_profitability_report.json  origin_submitter_remote.rs  package_batchability_report.json  package_economics_report.json  phase-0.md  phase-1.md  phase-10.md  phase-11.md  phase-12.md  (+41 more)
contracts/: foundry.toml
contracts/broadcast/Deploy.s.sol/31337/: run-1774037790177.json  run-1774038006008.json  run-1774039511873.json  run-1774039563594.json  run-1774039611156.json  run-1774039712126.json  run-1774039862553.json  run-1774039952762.json  run-1774040011783.json  run-1774040201242.json  run-latest.json
contracts/cache/: solidity-files-cache.json  test-failures
contracts/cache/Deploy.s.sol/31337/: run-1774039862553.json  run-latest.json
contracts/script/: Deploy.s.sol  DeployExecutor.s.sol
contracts/src/: ArbExecutor.sol  Dummy.sol
contracts/test/: ArbExecutor.t.sol  DebugReplay.t.sol  GasCalibration.t.sol  Phase19BatchCalibration.t.sol  ReplayCase1.t.sol  ReplayCase4.t.sol
crates/arb_calibration/: Cargo.toml
crates/arb_calibration/src/: lib.rs
crates/arb_canary/: Cargo.toml
crates/arb_canary/src/: lib.rs
crates/arb_config/: Cargo.toml
crates/arb_config/src/: lib.rs
crates/arb_execute/: Cargo.toml
crates/arb_execute/src/: builder.rs  lib.rs  nonce.rs  nonce_provider.rs  planner.rs  preflight.rs  signer.rs  submitter.rs  tenderly.rs
crates/arb_execute/tests/: tenderly_harness.rs
crates/arb_filter/: Cargo.toml
crates/arb_filter/src/: lib.rs
crates/arb_ingest/: Cargo.toml
crates/arb_ingest/examples/: gen_fixtures.rs  test_decoder.rs  verify_hashes.rs
crates/arb_ingest/src/: lib.rs
crates/arb_metrics/: Cargo.toml
crates/arb_metrics/src/: lib.rs
crates/arb_providers/: Cargo.toml
crates/arb_providers/src/: lib.rs
crates/arb_route/: Cargo.toml
crates/arb_route/src/: lib.rs
crates/arb_sim/: Cargo.toml
crates/arb_sim/src/: lib.rs
crates/arb_state/: Cargo.toml
crates/arb_state/src/: lib.rs
crates/arb_storage/: Cargo.toml
crates/arb_storage/src/: lib.rs
crates/arb_types/: Cargo.toml
crates/arb_types/src/: lib.rs
docs/: ARCHITECTURE.md  OPERATING_RULES.md  PHASES.md  ROADMAP.md  backlog.md  phase-6.md
fixtures/: cl_depth_updates.jsonl  flashblocks.jsonl  fork_verification_results.json  historical_cases.json  historical_cases_phase_17.json  historical_cases_phase_18.json  pending_logs.jsonl  phase19b_calibration_fixture_full.json  phase22_high_value_fixture.json  v2_sync.jsonl  v3_swap.jsonl
infra/grafana/provisioning/dashboards/: dashboards.yml
infra/grafana/provisioning/dashboards/files/: historical_calibration.json  observability.json
infra/grafana/provisioning/datasources/: prometheus.yml
infra/prometheus/: prometheus.yml
scripts/: analyzer.py  analyzer_20b.py.hex
tmp/: fetch_states.js
