[package]
name = "arb_calibration"
version = "0.1.0"
edition = "2021"

[dependencies]
arb_types = { path = "../arb_types" }
arb_config = { path = "../arb_config" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
chrono = "0.4"
tracing = "0.1"
alloy-primitives = { version = "0.8", features = ["serde"] }
anyhow = "1.0"
