[package]
name = "arb_execute"
version = "0.1.0"
edition = "2024"

[dependencies]
arb_types = { path = "../arb_types" }
alloy-primitives = { version = "0.8", features = ["rlp", "serde"] }
alloy-sol-types = "0.8"
alloy-signer = "0.8"
alloy-signer-local = "0.8"
alloy-network = "0.8"
alloy-rpc-types-eth = "0.8"
tokio = { version = "1.0", features = ["full"] }
