[package]
name = "arb_execute"
version = "0.1.0"
edition = "2024"

[dependencies]
arb_types = { path = "../arb_types" }
alloy-primitives = { version = "0.8", features = ["rlp", "serde"] }
alloy-sol-types = "0.8"
alloy-signer = "0.8"
alloy-signer-local = "0.8"
alloy-network = "0.8"
alloy-rpc-types-eth = "0.8"
alloy-consensus = "0.8"
arb_metrics = { path = "../arb_metrics" }
alloy-rlp = "0.3"
alloy-provider = "0.8"
alloy-transport-http = "0.8"
tokio = { version = "1.0", features = ["full"] }
reqwest = "0.12"
tracing = "0.1"
