[package]
name = "arb_ingest"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
arb_types = { path = "../arb_types" }
arb_metrics = { path = "../arb_metrics" }
serde = { version = "1.0.228", features = ["derive"] }
alloy-sol-types = "0.8.20"
alloy-primitives = { version = "0.8.20", features = ["serde"] }
hex = "0.4"
tracing = "0.1"
