[package]
name = "arb_state"
version = "0.1.0"
edition = "2021"

[dependencies]
arb_types = { path = "../arb_types" }
arb_metrics = { path = "../arb_metrics" }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
